Fixes some word spacing where bebas font is used

--- a/webroot/static/cc12/css/main.scss
+++ b/webroot/static/cc12/css/main.scss
@@ -26,6 +26,7 @@ p {
 }
 h1 {
 	font-family: $sans-serif;
+	word-spacing: 0.18em;
 }
 h2 {
 	color: $dk_gray;
@@ -35,6 +36,7 @@ h2 {
 	border-bottom: 1px solid lightgray;
 	margin-bottom: 14px;
 	padding: 10px 0 12px;
+	word-spacing: 0.18em;
 }
 h3 {
 	color: $red;
@@ -54,6 +56,7 @@ h6 {
 	color: $dk_gray;
 	font: 12px $sans-serif;
 	letter-spacing: 1px;
+	
 }
 
 form {
